--- a/assets/css/myjbake.css
+++ b/assets/css/myjbake.css
@@ -13,7 +13,37 @@ pre {
 
 /* nav-bar touch-ups*/
 .bg-light {
+    background-color: #FFE77A88 !important;
+    border-top: 3px solid #BB0f0aAA;
+    border-bottom: 4px solid #3A6B35AA;
+}
+
+/* carousel touch-ups */
+#carouselMainPage {
+    padding: 5px;
     border-width: 1px;
     border-style: solid;
-    border-color: #e7e7e7;
+    border-color: #bbbbbb;
+    margin-bottom: 25px;
+}
+
+.carousel-control-next, .carousel-control-prev {
+    width: 5% !important;
+}
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 100% 100%;
+  }
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%233A6B35'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-prev-icon {
+    color: orange;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%233A6B35'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
 }
