cleaning up ledes - when the post they come from is truncated sometimes their html code breaks so added </div> as required. Also wiggled location of images around to work with both html and pdf output

--- a/assets/css/myjbake.css
+++ b/assets/css/myjbake.css
@@ -13,7 +13,7 @@ pre {
 
 /* nav-bar touch-ups*/
 .bg-light {
-    background-color: #FFE77A88 !important;
+    background-color: #FFE77A !important;
     border-top: 3px solid #BB0f0aAA;
     border-bottom: 4px solid #3A6B35AA;
 }
